--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             },
             colors: {
               brand: {
-                dark: '#0f172a',
+                dark: '#050a14',
                 primary: '#2563eb',
                 accent: '#f59e0b',
                 light: '#f8fafc'
@@ -29,24 +29,26 @@
               'fade-in': 'fadeIn 0.6s ease-out forwards',
               'slide-up': 'slideUp 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards',
               'shimmer': 'shimmer 2.5s infinite linear',
-              'pulse-soft': 'pulseSoft 3s infinite ease-in-out',
+              'heart-beat': 'heartBeat 1.5s infinite',
+              'marquee-vertical': 'marqueeVertical 45s linear infinite',
+              'logo-glow': 'logoGlow 3s infinite ease-in-out',
             },
             keyframes: {
-              fadeIn: {
-                '0%': { opacity: '0' },
-                '100%': { opacity: '1' },
+              fadeIn: { '0%': { opacity: '0' }, '100%': { opacity: '1' } },
+              slideUp: { '0%': { opacity: '0', transform: 'translateY(30px)' }, '100%': { opacity: '1', transform: 'translateY(0)' } },
+              shimmer: { '0%': { backgroundPosition: '-200% 0' }, '100%': { backgroundPosition: '200% 0' } },
+              heartBeat: {
+                '0%, 100%': { transform: 'scale(1)' },
+                '10%, 30%': { transform: 'scale(1.3)' },
+                '20%': { transform: 'scale(1.1)' },
               },
-              slideUp: {
-                '0%': { opacity: '0', transform: 'translateY(30px)' },
-                '100%': { opacity: '1', transform: 'translateY(0)' },
+              marqueeVertical: {
+                '0%': { transform: 'translateY(0%)' },
+                '100%': { transform: 'translateY(-100%)' }
               },
-              shimmer: {
-                '0%': { backgroundPosition: '-200% 0' },
-                '100%': { backgroundPosition: '200% 0' },
-              },
-              pulseSoft: {
-                '0%, 100%': { opacity: '1' },
-                '50%': { opacity: '0.8' },
+              logoGlow: {
+                '0%, 100%': { filter: 'drop-shadow(0 0 5px rgba(37, 99, 235, 0.4))' },
+                '50%': { filter: 'drop-shadow(0 0 15px rgba(37, 99, 235, 0.8))' }
               }
             }
           }
@@ -54,14 +56,13 @@
       }
     </script>
     <style>
-      html { scroll-behavior: smooth; }
+      html { scroll-behavior: smooth; overflow-x: hidden; }
       .custom-scrollbar::-webkit-scrollbar { width: 8px; }
-      .custom-scrollbar::-webkit-scrollbar-track { background: #f1f1f1; border-radius: 4px; }
-      .custom-scrollbar::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 4px; }
-      .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
+      .custom-scrollbar::-webkit-scrollbar-track { background: #050a14; }
+      .custom-scrollbar::-webkit-scrollbar-thumb { background: #1e293b; border-radius: 4px; }
       
       .page-enter {
-        animation: fadeIn 0.5s ease-out, slideUp 0.6s cubic-bezier(0.16, 1, 0.3, 1);
+        animation: fadeIn 0.5s ease-out;
       }
       
       .shimmer-btn {
@@ -71,9 +72,13 @@
       }
 
       .glass-header {
-        background: rgba(15, 23, 42, 0.85);
+        background: rgba(5, 10, 20, 0.9);
         backdrop-filter: blur(12px);
         -webkit-backdrop-filter: blur(12px);
+      }
+
+      .location-mask {
+        mask-image: linear-gradient(to bottom, transparent, black 15%, black 85%, transparent);
       }
     </style>
     <script type="importmap">
@@ -88,7 +93,7 @@
     }
     </script>
   </head>
-  <body>
+  <body class="bg-gray-50 selection:bg-brand-primary selection:text-white">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
