--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%232563eb' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect width='20' height='14' x='2' y='3' rx='2'/%3E%3Cline x1='8' x2='16' y1='21' y2='21'/%3E%3Cline x1='12' x2='12' y1='17' y2='21'/%3E%3C/svg%3E" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%232563eb' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect width='20' height='14' x='2' y='3' rx='2'/%3E%3Cline x1='8' x2='16' y1='21' y2='21'/%3E%3Cline x1='12' x2='12' y1='17'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Criação de Sites Profissionais em Curitiba. Sites otimizados, SEO Local, Landing Pages e E-commerce. Atendemos todo o Brasil." />
+    <meta name="description" content="Criação de Sites Profissionais em Curitiba e todo o Paraná. Sites otimizados, SEO Local e Performance Digital." />
     <link rel="canonical" href="https://www.supremasite.com.br" />
-    <title>Suprema Site | Criação de Sites em Curitiba e Região</title>
+    <title>Suprema Mídia | Criação de Sites no Paraná</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-            },
+            fontFamily: { sans: ['Inter', 'sans-serif'] },
             colors: {
               brand: {
                 dark: '#050a14',
@@ -28,28 +26,17 @@
             animation: {
               'fade-in': 'fadeIn 0.6s ease-out forwards',
               'slide-up': 'slideUp 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards',
-              'shimmer': 'shimmer 2.5s infinite linear',
               'heart-beat': 'heartBeat 1.5s infinite',
-              'marquee-vertical': 'marqueeVertical 45s linear infinite',
+              'marquee-vertical': 'marqueeVertical 80s linear infinite',
+              'marquee-vertical-slow': 'marqueeVertical 120s linear infinite',
               'logo-glow': 'logoGlow 3s infinite ease-in-out',
             },
             keyframes: {
               fadeIn: { '0%': { opacity: '0' }, '100%': { opacity: '1' } },
               slideUp: { '0%': { opacity: '0', transform: 'translateY(30px)' }, '100%': { opacity: '1', transform: 'translateY(0)' } },
-              shimmer: { '0%': { backgroundPosition: '-200% 0' }, '100%': { backgroundPosition: '200% 0' } },
-              heartBeat: {
-                '0%, 100%': { transform: 'scale(1)' },
-                '10%, 30%': { transform: 'scale(1.3)' },
-                '20%': { transform: 'scale(1.1)' },
-              },
-              marqueeVertical: {
-                '0%': { transform: 'translateY(0%)' },
-                '100%': { transform: 'translateY(-100%)' }
-              },
-              logoGlow: {
-                '0%, 100%': { filter: 'drop-shadow(0 0 5px rgba(37, 99, 235, 0.4))' },
-                '50%': { filter: 'drop-shadow(0 0 15px rgba(37, 99, 235, 0.8))' }
-              }
+              heartBeat: { '0%, 100%': { transform: 'scale(1)' }, '10%, 30%': { transform: 'scale(1.3)' }, '20%': { transform: 'scale(1.1)' } },
+              marqueeVertical: { '0%': { transform: 'translateY(0%)' }, '100%': { transform: 'translateY(-100%)' } },
+              logoGlow: { '0%, 100%': { filter: 'drop-shadow(0 0 5px rgba(37, 99, 235, 0.4))' }, '50%': { filter: 'drop-shadow(0 0 15px rgba(37, 99, 235, 0.8))' } }
             }
           }
         }
@@ -57,42 +44,29 @@
     </script>
     <style>
       html { scroll-behavior: smooth; overflow-x: hidden; }
-      .custom-scrollbar::-webkit-scrollbar { width: 8px; }
-      .custom-scrollbar::-webkit-scrollbar-track { background: #050a14; }
-      .custom-scrollbar::-webkit-scrollbar-thumb { background: #1e293b; border-radius: 4px; }
-      
-      .page-enter {
-        animation: fadeIn 0.5s ease-out;
-      }
-      
+      .pause-on-hover:hover { animation-play-state: paused !important; }
+      .pause-on-hover:active { animation-play-state: paused !important; }
+      .location-mask { mask-image: linear-gradient(to bottom, transparent, black 10%, black 90%, transparent); }
+      .glass-header { background: rgba(5, 10, 20, 0.9); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); }
       .shimmer-btn {
         background: linear-gradient(90deg, #f59e0b 25%, #fbbf24 50%, #f59e0b 75%);
         background-size: 200% 100%;
         animation: shimmer 3s infinite linear;
       }
-
-      .glass-header {
-        background: rgba(5, 10, 20, 0.9);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-      }
-
-      .location-mask {
-        mask-image: linear-gradient(to bottom, transparent, black 15%, black 85%, transparent);
-      }
+      @keyframes shimmer { 0% { backgroundPosition: -200% 0; } 100% { backgroundPosition: 200% 0; } }
     </style>
-    <script type="importmap">
-    {
-      "imports": {
-        "react": "https://aistudiocdn.com/react@^19.2.0",
-        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-        "react/": "https://aistudiocdn.com/react@^19.2.0/",
-        "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-        "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6"
-      }
-    }
-    </script>
-  </head>
+  <script type="importmap">
+{
+  "imports": {
+    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "react": "https://esm.sh/react@^19.2.4",
+    "react-router-dom": "https://esm.sh/react-router-dom@^7.13.0"
+  }
+}
+</script>
+</head>
   <body class="bg-gray-50 selection:bg-brand-primary selection:text-white">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
