--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
@@ -6,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%232563eb' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect width='20' height='14' x='2' y='3' rx='2'/%3E%3Cline x1='8' x2='16' y1='21' y2='21'/%3E%3Cline x1='12' x2='12' y1='17'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Criação de Sites Profissionais em Curitiba e todo o Paraná. Sites otimizados, SEO Local e Performance Digital." />
+    <meta name="google-site-verification" content="JM9756LzNuxltCH4XtHek1mWDB8eL5j7kMN-_Dt_ZVM" />
     <link rel="canonical" href="https://www.supremasite.com.br" />
     <title>Suprema Mídia | Criação de Sites no Paraná</title>
     <script src="https://cdn.tailwindcss.com"></script>
