--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%232563eb' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect width='20' height='14' x='2' y='3' rx='2'/%3E%3Cline x1='8' x2='16' y1='21' y2='21'/%3E%3Cline x1='12' x2='12' y1='17'/%3E%3C/svg%3E" />
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%232563eb' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Crect width='20' height='14' x='2' y='3' rx='2'/%3E%3Cline x1='8' x2='16' y1='21'/%3E%3Cline x1='12' x2='12' y1='17'/%3E%3C/svg%3E" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Criação de Sites Profissionais em Curitiba e todo o Paraná. Sites otimizados, SEO Local e Performance Digital." />
     <meta name="google-site-verification" content="JM9756LzNuxltCH4XtHek1mWDB8eL5j7kMN-_Dt_ZVM" />
@@ -25,20 +25,16 @@
               }
             },
             animation: {
-              'fade-in': 'fadeIn 0.6s ease-out forwards',
-              'slide-up': 'slideUp 0.8s cubic-bezier(0.16, 1, 0.3, 1) forwards',
-              'heart-beat': 'heartBeat 1.5s infinite',
-              'marquee-vertical': 'marqueeVertical 80s linear infinite',
-              'marquee-vertical-slow': 'marqueeVertical 120s linear infinite',
-              'marquee-vertical-fast': 'marqueeVertical 40s linear infinite',
-              'logo-glow': 'logoGlow 3s infinite ease-in-out',
+              'fade-in': 'fadeIn 0.4s ease-out forwards',
+              'slide-up': 'slideUp 0.6s cubic-bezier(0.16, 1, 0.3, 1) forwards',
+              'marquee-v': 'marqueeV 60s linear infinite',
+              'marquee-v-rev': 'marqueeVRev 60s linear infinite',
             },
             keyframes: {
               fadeIn: { '0%': { opacity: '0' }, '100%': { opacity: '1' } },
-              slideUp: { '0%': { opacity: '0', transform: 'translateY(30px)' }, '100%': { opacity: '1', transform: 'translateY(0)' } },
-              heartBeat: { '0%, 100%': { transform: 'scale(1)' }, '10%, 30%': { transform: 'scale(1.3)' }, '20%': { transform: 'scale(1.1)' } },
-              marqueeVertical: { '0%': { transform: 'translateY(0%)' }, '100%': { transform: 'translateY(-100%)' } },
-              logoGlow: { '0%, 100%': { filter: 'drop-shadow(0 0 5px rgba(37, 99, 235, 0.4))' }, '50%': { filter: 'drop-shadow(0 0 15px rgba(37, 99, 235, 0.8))' } }
+              slideUp: { '0%': { opacity: '0', transform: 'translateY(20px)' }, '100%': { opacity: '1', transform: 'translateY(0)' } },
+              marqueeV: { '0%': { transform: 'translateY(0)' }, '100%': { transform: 'translateY(-50%)' } },
+              marqueeVRev: { '0%': { transform: 'translateY(-50%)' }, '100%': { transform: 'translateY(0)' } }
             }
           }
         }
@@ -46,8 +42,10 @@
     </script>
     <style>
       html { scroll-behavior: smooth; overflow-x: hidden; }
-      .pause-on-hover:hover { animation-play-state: paused !important; }
-      .location-mask { mask-image: linear-gradient(to bottom, transparent, black 10%, black 90%, transparent); }
+      .pause-on-hover:hover .animate-marquee-v,
+      .pause-on-hover:hover .animate-marquee-v-rev { animation-play-state: paused !important; }
+      .gpu-accelerated { transform: translateZ(0); backface-visibility: hidden; will-change: transform; }
+      .location-mask { mask-image: linear-gradient(to bottom, transparent, black 15%, black 85%, transparent); }
       .glass-header { background: rgba(5, 10, 20, 0.9); backdrop-filter: blur(12px); -webkit-backdrop-filter: blur(12px); }
       .shimmer-btn {
         background: linear-gradient(90deg, #f59e0b 25%, #fbbf24 50%, #f59e0b 75%);
@@ -55,14 +53,11 @@
         animation: shimmer 3s infinite linear;
       }
       @keyframes shimmer { 0% { backgroundPosition: -200% 0; } 100% { backgroundPosition: 200% 0; } }
-      
-      /* Custom Scrollbar for FAQ Modal */
       .custom-scroll::-webkit-scrollbar { width: 6px; }
       .custom-scroll::-webkit-scrollbar-track { background: #f1f1f1; }
       .custom-scroll::-webkit-scrollbar-thumb { background: #2563eb; border-radius: 10px; }
     </style>
     
-    <!-- Schema.org Aggregate Rating -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org/",
